--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header header--background-grey">
+    <header class="header">
         <div class="header__top"></div>
         <div class="header__title">
             <div class="header__title-fname">LUCIE</div>
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <section class="about-me about-me--background-white">
+    <section class="about-me">
         <div class="about-me__container">
             <h2>O MNĚ</h2>
             <div class="about-me__text">
@@ -36,7 +36,37 @@
         </div>
     </section>
 
-    <section class="my-work my-work--background-grey">
+    <section class="practice-bem-and-grid">
+        <div class="practice-bem-and-grid__container">
+            <h2>CVIČENÍ NA BEM A GRID</h2>
+            <div class="practice__box--green">
+                <div class="text-in-box">Box1</div>
+            </div>
+            <div class="practice__box--yellow">
+                <div class="text-in-box">Box2</div>
+            </div>
+            <div class="practice__box--blue">
+                <div class="text-in-box">Box3</div>
+            </div>
+            <div class="practice__box--pink">
+                <div class="text-in-box">Box4</div>
+            </div>
+            <div class="practice__box--green">
+                <div class="text-in-box">Box5</div>
+            </div>
+            <div class="practice__box--yellow">
+                <div class="text-in-box">Box6</div>
+            </div>
+            <div class="practice__box--blue">
+                <div class="text-in-box">Box7</div>
+            </div>
+            <div class="practice__box--pink">
+                <div class="text-in-box">Box8</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="my-work">
         <div class="my-work__container">
         <h2>CO DĚLÁM</h2>        
             <div class="my-work__box">Překlady</div>
@@ -44,27 +74,27 @@
             <div class="my-work__box">JS</div>
             <div class="my-work__box">React</div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="my-projects my-projects--background-white">
+    <section class="my-projects">
         <div class="my-projects__container">
-        <h2>PROJEKTY</h2>
-        <div class="my-projects__web-heading">
-        <h3>Web</h3> 
-        <p>Návrh prezentačního webu</p>
+            <h2>PROJEKTY</h2>
+            <div class="my-projects__web-text">
+                <h3>Web</h3>
+                <p>Návrh prezentačního webu</p>
+            </div>
+            <div class="my-projects__web-picture"><img src="https://picsum.photos/150/80"></div>
+            <div class="my-projects__web-link"><a href="">Kód na GitLabu</a></div>
+            <div class="my-projects__react-text">
+                <h3>React</h3>
+                <p>Aplikace pro výpočet skóre hry</p>
+            </div>
+            <div class="my-projects__react-picture"><img src="https://picsum.photos/150/80"></div>
+            <div class="my-projects__react-link"><a href="">Kód na GitLabu</a></div>
         </div>
-        <div class="my-projects__web-picture"><img src="https://picsum.photos/150/80"></div>
-        <div class="my-projects__web-link"><a href="">Kód na GitLabu</a></div>
-        <div class="my-projects__react-heading">
-            <h3>React</h3> 
-        <p>Aplikace pro výpočet skóre hry</p>
-        </div>
-        <div class="my-projects__react-picture"><img src="https://picsum.photos/150/80"></div>
-        <div class="my-projects__react-heading"><a href="">Kód na GitLabu</a></div>
-    </div>
     </section>
 
-    <section class="contact contact--background-grey">
+    <section class="contact">
         <h2>KONTAKT</h2>
         <p>lucie.cicvarkova@email.cz</p>
     </section>
