--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucie Cicvárková</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">    
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Roboto:wght@300;400&display=swap"
         rel="stylesheet">
@@ -36,37 +35,39 @@
         </div>
     </section>
 
-    <section class="practice-bem-and-grid">
-        <div class="practice-bem-and-grid__container">
+    <section class="practice">
+        <div class="practice__container">
             <h2>CVIČENÍ NA BEM A GRID</h2>
             <div class="practice__box--green">
-                <div class="text-in-box">Box1</div>
+                <div class="practice__text-in-box">Box1</div>
             </div>
             <div class="practice__box--yellow">
-                <div class="text-in-box">Box2</div>
+                <div class="practice__text-in-box">Box2</div>
             </div>
             <div class="practice__box--blue">
-                <div class="text-in-box">Box3</div>
+                <div class="practice__text-in-box">Box3</div>
             </div>
             <div class="practice__box--pink">
-                <div class="text-in-box">Box4</div>
+                <div class="practice__text-in-box">Box4</div>
             </div>
             <div class="practice__box--green">
-                <div class="text-in-box">Box5</div>
+                <div class="practice__text-in-box">Box5</div>
             </div>
             <div class="practice__box--yellow">
-                <div class="text-in-box">Box6</div>
+                <div class="practice__text-in-box">Box6</div>
             </div>
             <div class="practice__box--blue">
-                <div class="text-in-box">Box7</div>
+                <div class="practice__text-in-box">Box7</div>
             </div>
             <div class="practice__box--pink">
-                <div class="text-in-box">Box8</div>
+                <div class="practice__text-in-box">Box8</div>
             </div>
         </div>
     </section>
 
-    <!-- <section class="my-work">
+    <!----to replace for the practice section 
+        
+        <section class="my-work">
         <div class="my-work__container">
         <h2>CO DĚLÁM</h2>        
             <div class="my-work__box">Překlady</div>
@@ -99,7 +100,7 @@
         <p>lucie.cicvarkova@email.cz</p>
     </section>
 
-    <footer class="footer footer--background-red">&copy Lucie Cicvárková 2021</footer>
+    <footer class="footer--background-red">&copy Lucie Cicvárková 2021</footer>
 </body>
 
 </html>
