--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       for(h=0;h<i.length;h++)g(a,i[h]);var j="set set_once union unset remove delete".split(" ");a.get_group=function(){function b(c){d[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));a.push([e,call2])}}for(var d={},e=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<j.length;c++)b(j[c]);return d};b._i.push([e,f,c])};b.__SV=1.2;e=f.createElement("script");e.type="text/javascript";e.async=!0;e.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?
       MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";g=f.getElementsByTagName("script")[0];g.parentNode.insertBefore(e,g)}})(document,window.mixpanel||[]);
       mixpanel.init("dcf5f60c93ab49c47679f22d3b6231af");
-      mixpanel.track('Sign up');
+      mixpanel.track('homepage');
       </script>
 </head>
 
@@ -32,13 +32,11 @@
         <div class="about-me__container">
             <h2>O MNĚ</h2>
             <div class="about-me__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab accusantium neque consequatur voluptates
-                nisi
-                quisquam delectus incidunt tenetur? Omnis, saepe quam minus tempore dolore error dolorum iste quis
-                sapiente
-                aperiam?
+                Překladatelka s láskou k jazykům lidským i programovacím. 
+                Chci vytvářet weby a aplikace, které budou příjemné na pohled
+                a lidé se v nich vyznají. Přívětivé, jednoduché, smysluplné. 
             </div>
-            <img class="about-me__photo" src="https://picsum.photos/150">
+            <img class="about-me__photo" src="images/L_profilovka_mandl.jpg">
         </div>
     </section>
 
@@ -111,7 +109,7 @@
       <g>
         <g>
           <g>
-            <circle cx="64" cy="64" r="50" style="fill: #f0db4f" />
+            <circle cx="64" cy="64" r="50" fill="#acacac" />
           </g>
         </g>
         <g id="Layer_1_1_">
@@ -184,8 +182,8 @@
 
     <section class="my-projects">
         <div class="my-projects__container">
-            <h2>PROJEKTY</h2>
-            <div class="my-projects__project--web">
+          <h2>PROJEKTY</h2>
+          <div class="my-projects__project--web">
                 <h3>Web</h3>
                 <p>Návrh prezentačního webu</p>   
                 <p class="my-projects__link">
@@ -198,9 +196,9 @@ viewBox="0 0 50 50">
 <path d="M38.288 10.297l1.414 1.415-14.99 14.99-1.414-1.414z"/>
 <path d="M40 20h-2v-8h-8v-2h10z"/>
 <path d="M35 38H15c-1.7 0-3-1.3-3-3V15c0-1.7 1.3-3 3-3h11v2H15c-.6 0-1 .4-1 1v20c0 .6.4 1 1 1h20c.6 0 1-.4 1-1V24h2v11c0 1.7-1.3 3-3 3z"/>
-</svg>
-</span>
-</a>
+                  </svg>
+                  </span>
+                   </a>
                 </p>        
             <picture class="my-projects__picture--web">
               <source
@@ -225,20 +223,20 @@ viewBox="0 0 50 50">
     <path d="M38.288 10.297l1.414 1.415-14.99 14.99-1.414-1.414z"/>
     <path d="M40 20h-2v-8h-8v-2h10z"/>
     <path d="M35 38H15c-1.7 0-3-1.3-3-3V15c0-1.7 1.3-3 3-3h11v2H15c-.6 0-1 .4-1 1v20c0 .6.4 1 1 1h20c.6 0 1-.4 1-1V24h2v11c0 1.7-1.3 3-3 3z"/>
-    </svg>
-    </span>
+                      </svg>
+                    </span>
                   </a>
                 </p>
-             <picture class="my-projects__picture--react">
-              <source
-              srcset="images/project_agricola_big.png"
-              width="250"
-              media="(min-width: 650px)"
-              >
-              <img src="images/project_agricola_small.png">
-            </picture>
-          </div>
-        </div>
+                <picture class="my-projects__picture--react">
+                    <source
+                        srcset="images/project_agricola_big.png"
+                        width="250"
+                        media="(min-width: 650px)"
+                    >
+                     <img src="images/project_agricola_small.png">
+                </picture>
+             </div>
+         </div>
     </section>
 
     <section class="contact">
