uprgade 1 - spouštění animací JS

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="about-me__text">
                 Překladatelka s láskou k jazykům lidským i programovacím. 
                 Chci vytvářet weby a aplikace, které budou příjemné na pohled
-                a lidé se v nich vyznají. Přívětivé, jednoduché, smysluplné. 
+                a lidé se v nich vyznají. Přívětivé, jednoduché, užitečné. 
             </div>
             <img class="about-me__photo" src="images/L_profilovka_mandl.jpg">
         </div>
@@ -245,6 +245,8 @@ viewBox="0 0 50 50">
     </section>
 
     <footer class="footer--background-red">&copy Lucie Cicvárková 2021</footer>
+
+    <script defer src="scripts.js"></script>
 </body>
 
 </html>
